Add ACL edit shellcode exploit to HEVD stack buffer overflow

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,6 @@
 resolver = "2"
 
 members = [
-    "stack_buffer_overflow",
+    "stack_buffer_overflow_token_stealing",
+    "stack_buffer_overflow_acl_edit",
 ]
