Add new token stealing exploit module and update dependencies
- Introduced `stack_buffer_overflow_token_stealing_smep_no_kvashadow_pte` module with a new ROP chain implementation.
- Updated `Cargo.toml` to include the new module and its dependencies.
- Modified `Cargo.lock` to reflect the addition of the new package and updated version of `win-kexp`.
- Refactored existing exploit code for consistency in gadget naming conventions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ members = [
     "stack_buffer_overflow_acl_edit",
     "stack_buffer_overflow_token_stealing",
     "stack_buffer_overflow_token_stealing_smep_no_kvashadow",
+    "stack_buffer_overflow_token_stealing_smep_no_kvashadow_pte",
 ]
