Add memory disclosure exploit for Non-Paged Pool NX via Named Pipe
- Introduced new exploit module `memory_disclosure_non_paged_pool_nx_named_pipe`
- Implemented memory disclosure technique targeting HackSysExtremeVulnerableDriver
- Added Cargo.toml configuration for the new exploit module
- Developed complex pool spraying and memory leaking strategy
- Updated Cargo.lock and Cargo.toml to include the new module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 resolver = "2"
 
 members = [
+    "buffer_overflow_non_paged_pool_nx",
+    "memory_disclosure_non_paged_pool_nx_named_pipe",
     "stack_buffer_overflow_acl_edit",
     "stack_buffer_overflow_token_stealing",
     "stack_buffer_overflow_token_stealing_smep_no_kvashadow",
